--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Baza filmova
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-list lines="full">
+  <ion-item>
+    <ion-label position ="floating">Naziv Filma</ion-label>
+    <ion-input [(ngModel)]="nazivFilma" type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position ="floating">Godina</ion-label>
+    <ion-input [(ngModel)]="godina" type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position ="floating">Ocena</ion-label>
+    <ion-input [(ngModel)]="ocena" type="text"></ion-input>
+  </ion-item>
+  <ion-row>
+    <ion-col>
+      <ion-button type="button" (click)="addFilm()" 
+      color="primary" shape="full" expand="block">
+      Dodaj film
+      </ion-button>
+    </ion-col>
+  </ion-row>
+</ion-list>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+<ion-list>
+  <ion-list-header>
+    Lista dodatih filmova
+  </ion-list-header>
+
+  <ion-item lines="inset" *ngFor="let film of films">
+    <ion-label>
+      <h5>{{film.nazivFilma}} - ({{film.godina}}, {{film.ocena}})</h5>
+    </ion-label>
+
+<div class="item-note">
+  <ion-icon name="create" style="zoom: 2.0;" [routerLink]="['/update-film/',film.id]"></ion-icon>
+  <ion-icon name="trash"  style="zoom: 2.0;" (click)="deleteFilm(film.id)"></ion-icon>
+</div>
+</ion-item>
+</ion-list>
 </ion-content>
